Commit version 1.0 stable.

--- a/webproject/src/main/webapp/WEB-INF/config.properties
+++ b/webproject/src/main/webapp/WEB-INF/config.properties
@@ -1,3 +1,3 @@
-url=jdbc:mysql://ec2-3-144-150-195.us-east-2.compute.amazonaws.com:3306/myDB?useSSL=false
+url=jdbc:mysql://ec2-3-144-150-195.us-east-2.compute.amazonaws.com:3306/myDBTech?useSSL=false
 user=shintufelper
 password=ks1rulez
